src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Direct_Marketing_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Direct Marketing Center</description>
        <label>Direct Marketing Center</label>
        <referenceTo>Direct_Marketing_Center__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dominant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dominant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>For use in data migrations.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Market_Description__c</fullName>
        <formula>Market__r.Description__c</formula>
        <label>Market Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pod</description>
        <label>POD</label>
        <referenceTo>POD__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRISM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Property has PRISM</description>
        <label>PRISM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <description>Primary Email for this Account / Customer</description>
        <inlineHelpText>Primary Email for this Account / Customer</inlineHelpText>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Property_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if the property is open</description>
        <inlineHelpText>Indicator if the property is open</inlineHelpText>
        <label>Property Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Brand__c</fullName>
        <description>Property Brand</description>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Harrah&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horseshoe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caesars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cromwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planet Hollywood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvey&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flamingo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showboat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Code__c</fullName>
        <description>Hotel Property Code</description>
        <globalPicklist>Property</globalPicklist>
        <inlineHelpText>Hotel Property Code</inlineHelpText>
        <label>Property Code</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCPId__c</fullName>
        <displayFormat>UCP-{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>UCPId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Vendor_user_id__c</fullName>
        <description>Vendor user id</description>
        <inlineHelpText>this is the user id needed by FTPS side to put the file in the correct folder</inlineHelpText>
        <label>Vendor user id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>winet_id__c</fullName>
        <label>winet id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>winet_id__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>UCPId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordTypeName__c</field>
            <operation>equals</operation>
            <value>UCP</value>
        </filters>
        <filters>
            <field>winet_id__c</field>
            <operation>equals</operation>
            <value>18003185028</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>winet_id__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>External_ID__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Market__c</columns>
        <columns>Market_Description__c</columns>
        <columns>Property_Active__c</columns>
        <columns>Property_Code__c</columns>
        <columns>RecordTypeName__c</columns>
        <columns>Dominant__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.UCP</value>
        </filters>
        <filters>
            <field>winet_id__c</field>
            <operation>equals</operation>
            <value>18003185028</value>
        </filters>
        <label>All Customers</label>
    </listViews>
    <listViews>
        <fullName>DM_Vendor_List</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Primary_Email__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RecordTypeName__c</field>
            <operation>equals</operation>
            <value>marketing delivery vendor</value>
        </filters>
        <label>DM Vendor List</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Properites</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordTypeName__c</field>
            <operation>equals</operation>
            <value>Property</value>
        </filters>
        <label>Properites</label>
    </listViews>
    <listViews>
        <fullName>Studio_Vendors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordTypeName__c</field>
            <operation>equals</operation>
            <value>marketing studio vendor</value>
        </filters>
        <label>Studio Vendors</label>
    </listViews>
    <recordTypes>
        <fullName>Marketing_Delivery_Vendor</fullName>
        <active>true</active>
        <description>Marketing Delivery Vendor</description>
        <label>Marketing Delivery Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Studio_Vendor</fullName>
        <active>true</active>
        <description>Marketing Studio Vendor</description>
        <label>Marketing Studio Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property</fullName>
        <active>true</active>
        <description>Property</description>
        <label>Property</label>
    </recordTypes>
    <recordTypes>
        <fullName>UCP</fullName>
        <active>true</active>
        <description>UCP</description>
        <label>UCP</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>